--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "better-scroll": "^0.4.0",
     "bootstrap": "^3.3.7",
     "fastclick": "^1.0.6",
+    "js-base64": "^2.5.1",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "material-design-icons": "^3.0.1",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
