--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "better-scroll": "^0.4.0",
     "bootstrap": "^3.3.7",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.1.0",
     "js-base64": "^2.5.1",
     "jsonp": "^0.2.1",
     "lyric-parser": "^1.0.1",
